# SANS_Deuteration_Paramerer_Optimization

./: README.md  config.ini  parallel_process_pdb.sh  pdb_config.ini  process_pdb.sh  pyproject.toml  run_convergence_simulation_multiprotein.sh
src/python_project/: __init__.py  d2o_vs_d.py  fitness_evaluation.py  generate_deuterated_pdbs.py  pdb_deuteration.py  plot_fitness_evolution.py
