[project]
authors = [{name = "Homero", email = "homerosanchez1803@gmail.com"}]
dependencies = ["gemmi>=0.7.4,<0.8"]
name = "Python_project"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
python_project = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
numpy = ">=2.4.1,<3"
dataclasses = ">=0.8,<0.9"
biopython = ">=1.86,<2"
gromacs = ">=2026.0,<2027"
scipy = ">=1.17.0,<2"
matplotlib = ">=3.10.8,<4"
pdbfixer = ">=1.12,<2"
openmm = ">=8.4.0,<9"
parallel = ">=20260122,<20260123"
pandas = ">=3.0.1,<4"
